--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Classic 2048</title>
-    <!-- VK Bridge -->
-    <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
-    <!-- Наши скрипты -->
-    <script src="vkbridge.js"></script>
-    <script src="vksdk.js"></script>
     <style>
       html {
         box-sizing: border-box;
@@ -82,6 +77,19 @@
         </div>
       </div>
     </div>
+    <!-- VK Bridge должен загружаться первым -->
+    <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
+    <script>
+      // Инициализируем VK Bridge сразу
+      vkBridge.send('VKWebAppInit').then(() => {
+        console.log('VK Bridge initialized');
+      }).catch(error => {
+        console.error('VK Bridge initialization failed:', error);
+      });
+    </script>
+    <!-- Наши скрипты -->
+    <script src="vkbridge.js"></script>
+    <script src="vksdk.js"></script>
     <script>
       const buildUrl = "Build";
       const loaderUrl = buildUrl + "/Classic 2048.loader.js";
@@ -116,8 +124,13 @@
           window.unityInstance = unityInstance;
           loadingCover.style.display = "none";
           // Инициализируем VK SDK после загрузки Unity
-          vkBridgeInit();
+          if (typeof vkBridgeInit === 'function') {
+            vkBridgeInit();
+          } else {
+            console.error('vkBridgeInit is not defined');
+          }
         }).catch((message) => {
+          console.error('Unity error:', message);
           alert(message);
         });
       };
