--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Classic 2048</title>
+    <title>2048</title>
     <style>
       html {
         box-sizing: border-box;
@@ -27,6 +27,7 @@
       #unity-canvas {
         width: 100%;
         height: 100%;
+        background: #231F20;
       }
       #loading-cover {
         position: absolute;
@@ -67,7 +68,7 @@
     </style>
   </head>
   <body>
-    <div id="unity-container" class="unity-desktop">
+    <div id="unity-container">
       <canvas id="unity-canvas"></canvas>
       <div id="loading-cover" style="display:none;">
         <div id="unity-loading-bar">
@@ -77,37 +78,32 @@
         </div>
       </div>
     </div>
+
     <!-- VK Bridge должен загружаться первым -->
     <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
-    <script>
-      // Инициализируем VK Bridge сразу
-      vkBridge.send('VKWebAppInit').then(() => {
-        console.log('VK Bridge initialized');
-      }).catch(error => {
-        console.error('VK Bridge initialization failed:', error);
-      });
-    </script>
+    
     <!-- Наши скрипты -->
     <script src="vkbridge.js"></script>
     <script src="vksdk.js"></script>
+
     <script>
-      const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/Classic 2048.loader.js";
-      const config = {
-        dataUrl: buildUrl + "/Classic 2048.data",
-        frameworkUrl: buildUrl + "/Classic 2048.framework.js",
-        codeUrl: buildUrl + "/Classic 2048.wasm",
+      var buildUrl = "Build";
+      var loaderUrl = buildUrl + "/Classic2048.loader.js";
+      var config = {
+        dataUrl: buildUrl + "/Classic2048.data",
+        frameworkUrl: buildUrl + "/Classic2048.framework.js",
+        codeUrl: buildUrl + "/Classic2048.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "GameDevLab",
-        productName: "Classic 2048",
-        productVersion: "0.0.0.1",
+        productName: "2048",
+        productVersion: "1.0",
       };
 
-      const container = document.querySelector("#unity-container");
-      const canvas = document.querySelector("#unity-canvas");
-      const loadingCover = document.querySelector("#loading-cover");
-      const progressBarEmpty = document.querySelector("#unity-progress-bar-empty");
-      const progressBarFull = document.querySelector("#unity-progress-bar-full");
+      var container = document.querySelector("#unity-container");
+      var canvas = document.querySelector("#unity-canvas");
+      var loadingCover = document.querySelector("#loading-cover");
+      var progressBarEmpty = document.querySelector("#unity-progress-bar-empty");
+      var progressBarFull = document.querySelector("#unity-progress-bar-full");
 
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         container.className = "unity-mobile";
@@ -115,7 +111,7 @@
 
       loadingCover.style.display = "";
 
-      const script = document.createElement("script");
+      var script = document.createElement("script");
       script.src = loaderUrl;
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
@@ -124,14 +120,9 @@
           window.unityInstance = unityInstance;
           loadingCover.style.display = "none";
           // Инициализируем VK SDK после загрузки Unity
-          if (typeof vkBridgeInit === 'function') {
-            vkBridgeInit();
-          } else {
-            console.error('vkBridgeInit is not defined');
-          }
+          vkBridgeInit();
         }).catch((message) => {
           console.error('Unity error:', message);
-          alert(message);
         });
       };
       document.body.appendChild(script);
