--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       // Инициализируем VK Bridge до загрузки Unity
       vkBridgeInit();
 
-      var buildUrl = "Build";
+      var buildUrl = "./Build";
       var loaderUrl = buildUrl + "/Classic2048.loader.js";
       var config = {
         dataUrl: buildUrl + "/Classic2048.data",
